--- a/proyectos.html
+++ b/proyectos.html
@@ -50,10 +50,10 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="proyectos.html">Proyectos</a></li>
+          <li><a href="proyectos.html" class="active">Proyectos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -153,7 +153,7 @@
                     <div class="col-lg-12 d-flex align-items-start mb-4">
     
                       <div>
-                        <p><a href="#" class="btn-cta">Contactar</a></p>
+                        <p><a href="contacto.html" class="btn-cta">Contactar</a></p>
     
                       </div>
                     </div>
