--- a/servicios.html
+++ b/servicios.html
@@ -51,8 +51,8 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="servicios.html" class="active">Servicios</a></li>
           <li><a href="nosotros.html">Nosotros</a></li>
           <li><a href="proyectos.html">Proyectos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
