--- a/servicios.html
+++ b/servicios.html
@@ -37,7 +37,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/serprallogo.png" alt="AgriCulture">
+        <img src="assets/img/serprallogo.png" alt="serpral">
       </a>
 
       <nav id="navmenu" class="navmenu">
